@@ -1,7 +1,8 @@
 Revision history for berrybrew
 
 1.24 UNREL
-        - 
+        - "berrybrew switch" no longer needs a new cmd window opened for env
+          vars to work properly (closes #164) 
 
 1.23    2019-05-26
         - fixed issue in README where some external doc links were pointing to
